--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         //配置
         var config = {
             cover: './imgs/cover.jpeg', //自定义封面图
-            iPhone_download_url: "https://tiancgame.lanzouo.com/b00wj3l8j", // iPhone下载链接
-            android_download_url: "https://tiancgame.lanzouo.com/b00wj3l8j", // Android下载链接
+            iPhone_download_url: "https://onestore.yuanhan.xyz/releases/OneStore_汉化版.apk", // iPhone下载链接
+            android_download_url: "https://onestore.yuanhan.xyz/releases/OneStore_汉化版.apk", // Android下载链接
             logo : "./imgs/logo.png", //自定义logo图
             btn_img : "./imgs/btn.png", //自定义下载按钮图表
-            open_app_url: "https://tiancgame.lanzouo.com/b00wj3l8j"
+            open_app_url: "https://onestore.yuanhan.xyz/releases/OneStore_汉化版.apk"
         }
         var env = function () {
             var inBrowser = typeof window !== 'undefined'
