--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <title>OneStore下载（提取码：cj0e）</title>
+    <title>OneStore下载</title>
     <link rel="stylesheet" href="./css/base.css?v=1.03" />
     <link rel="stylesheet" href="./css/style3.css" />
 </head>
