--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <title>OneStore官方下载——一款免费观看电视剧、电影、动漫的工具...</title>
+    <title>OneStore官方下载——免费观看电视剧、电影、动漫的工具...</title>
     <link rel="stylesheet" href="./css/base.css?v=1.03" />
     <link rel="stylesheet" href="./css/style3.css" />
 </head>
